<?xml version="1.0"?>
<package>
  <name>iiwa_multiscenario</name>
  <version>0.0.0</version>
  <description>The iiwa_multiscenario package. Framework for experiments with multiscenario collision reactions.</description>

  <maintainer email="s.mikhel@innopolis.ru">Stas</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>iiwa_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>iiwa_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
